# django-cloudtask

./: .pre-commit-config.yaml  README.md  pyproject.toml  runtests.py
.circleci/: config.yml
src/django_cloudtask/: __init__.py  apps.py  task.py  urls.py  utils.py  views.py
src/django_cloudtask/management/commands/: sync_scheduler.py
tests/: test_django_cloudtask.py
